# tpmp-gpd-lab5-quilboars

./: .gitignore  CMakeLists.txt  README.md  hippodrome.db
.github/workflows/: cmake.yml
docs/: Additional-specification.md  Database-scheme.md  Functional-requirements.md  Project-specification.md  _config.yml  glossary.md  index.md
src/: CMakeLists.txt  Hippodrome.sln  Hippodrome.vcxproj  main.cpp
src/Authorization/: auth_controller.h  reg_info_manager.h  security_manager.h  sha256.h  user_session.h
src/Authorization/imp/: auth_controller.cpp  reg_info_manager.cpp  security_manager.cpp  sha256.cpp
src/DBManagment/: ConnectionKeeper.h
src/DBManagment/imp/: ConnectionKeeper.cpp
src/Models/: Horse.h  Jockey.h  Owner.h  Prize.h  Race.h  RaceRecord.h
src/Models/Authorization/: Role.h  User.h
src/Repositories/: HorseRepository.h  JockeyRepository.h  OwnerRepository.h  PrizeRepository.h  RaceRecordRepository.h  RaceRepository.h  UserRepository.h
src/Repositories/imp/: HorseRepository.cpp  JockeyRepository.cpp  OwnerRepository.cpp  PrizeRepository.cpp  RaceRecordRepository.cpp  RaceRepository.cpp  UserRepository.cpp
src/Types/: result_codes.h  types.h
src/UserInteraction/: UIManager.h
src/UserInteraction/imp/: UIManager.cpp
src/sqlite/: CMakeLists.txt  sqlite3.h
test/: CMakeLists.txt  TextFixture.cpp  make.cpp  test.db
toolchain/: build.bat  build.sh
